# wups

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/config/: mod.rs
core/src/storage/: mod.rs
macros/: Cargo.toml  README.md
macros/src/: hooks.rs  lib.rs  meta.rs
src/: bindings.rs  lib.rs  macros.rs  wrapper.h
src/config/: glyphs.rs  mod.rs
src/storage/: mod.rs
src/ui/: glyphs.rs  mod.rs
sys/: Cargo.toml  build.rs
sys/src/: bindings.rs  lib.rs
wups-macros/: Cargo.toml  README.md
wups-macros/src/: lib.rs
