[package]
name = "wups"
description = "Wii U Plugin System for Rust"
license-file = "LICENSE"
version = "0.4.1"
edition = "2024"
repository = "https://github.com/rust-wiiu/wups"
publish = false

[features]
default = []

[lib]
name = "wups"
crate-type = ["lib"]

[profile]
dev.panic = "abort"
release.panic = "abort"

[dependencies]
wups-core = { path = "./core", version = "0.1.0" }
wups-sys = { path = "./sys", version = "0.1.0" }
wups-macros = { path = "./macros", version = "0.1.0" }
