[package]
name = "wups-core"
version = "0.4.2"
edition = "2024"

[dependencies]
flagset = { version = "0.4.6", default-features = false }
thiserror = { version = "2.0.3", default-features = false }
wups-sys = { path="../sys", version = "0.1.0" }
wut = { git = "https://github.com/rust-wiiu/wut", tag = "v0.4.2" }
